--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -35,16 +35,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
         tools:ignore="MissingConstraints">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_marginBottom="100dp"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginBottom="50dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_image"
@@ -75,130 +75,101 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:weightSum="2"
             android:layout_marginBottom="25dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="2">
 
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="center"
                 android:paddingLeft="10dp"
+                android:text="User Name"
                 android:textSize="20dp"
-                android:textStyle="bold"
-                android:layout_weight="1"
-                android:text="User Name" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/uname"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="center"
                 android:textSize="18dp"
-                android:textStyle="bold"
-                android:layout_weight="1" />
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginBottom="20dp"
-            android:weightSum="2"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="2">
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:textSize="20dp"
-                android:paddingLeft="10dp"
-                android:textStyle="bold"
                 android:layout_weight="1"
-                android:text="User Email" />
+                android:gravity="center"
+                android:paddingLeft="10dp"
+                android:text="User Email"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/uemail"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="center"
                 android:textSize="18dp"
-                android:textStyle="bold"
-                android:layout_weight="1"
-                />
+                android:textStyle="bold" />
         </LinearLayout>
-      <LinearLayout
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:weightSum="2"
-            android:orientation="horizontal">
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:textSize="20dp"
-                android:textStyle="bold"
                 android:layout_weight="1"
-                android:text="Payment Receipt Number" />
+                android:gravity="center"
+                android:text="Payment Receipt Number"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/prec"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="center"
+                android:text=""
                 android:textSize="18dp"
-                android:textStyle="bold"
-                android:layout_weight="1"
-                android:text="" />
+                android:textStyle="bold" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
+        <Button
+            android:id="@+id/signout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-            android:orientation="horizontal">
-
-          <!--  <Switch
-                android:id="@+id/mode"
-                android:checked="false"
-                android:paddingEnd="75dp"
-                android:paddingLeft="60dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Dark Mode"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                tools:ignore="UseSwitchCompatOrMaterialXml" />
-                -->
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:weightSum="2"
-            android:orientation="horizontal">
-
-        </LinearLayout>
+            android:layout_gravity="center"
+            android:text="Sign Out"
+            android:textAllCaps="false"
+            tools:layout_editor_absoluteX="159dp"
+            tools:layout_editor_absoluteY="545dp" />
 
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/signout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="159dp"
-        android:layout_marginEnd="164dp"
-        android:layout_marginBottom="112dp"
-        android:text="Sign Out"
-        android:textAllCaps="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
