--- a/app/src/main/res/layout/activity_add_order.xml
+++ b/app/src/main/res/layout/activity_add_order.xml
@@ -5,21 +5,21 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:padding="10dp"
+    android:padding="10sp"
     android:layout_height="match_parent"
     tools:context=".add_order">
 
 
     <EditText
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="50sp"
         android:id="@+id/orderID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:maxLines="1"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginBottom="20sp"
         android:inputType="textPersonName"
         android:hint="@string/order_id" />
 
@@ -29,20 +29,20 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:maxLines="1"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginBottom="20sp"
         android:inputType="textPersonName"
         android:hint="@string/order_title" />
 
     <EditText
         android:id="@+id/contactDetails"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="150sp"
         android:ems="10"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginBottom="20sp"
         android:inputType="textPersonName"
 
         android:hint="@string/contact_details" />
@@ -53,9 +53,9 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:maxLines="1"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginBottom="20sp"
         android:inputType="textPersonName"
         android:hint="@string/tracking_number"
         tools:ignore="TextFields" />
@@ -66,9 +66,9 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:maxLines="1"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginBottom="20sp"
         android:inputType="textPersonName"
         android:hint="@string/shipped_date"
         tools:ignore="TextFields" />
@@ -79,9 +79,9 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:maxLines="1"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginBottom="20sp"
         android:inputType="textPersonName"
         android:hint="@string/completed_date"
         tools:ignore="TextFields" />
@@ -90,8 +90,8 @@
     <com.skydoves.elasticviews.ElasticImageView
         android:id="@+id/button"
         android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:padding="5dp"
+        android:layout_height="75sp"
+        android:padding="5sp"
         android:src="@drawable/button_place_order" />
 
 
