--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -10,15 +10,15 @@
 
 
     <EditText
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="50sp"
         android:id="@+id/proID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:maxLines="1"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginBottom="20sp"
         android:inputType="textPersonName"
         android:hint="@string/product_id" />
 
@@ -28,20 +28,20 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:maxLines="1"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginBottom="20sp"
         android:inputType="textPersonName"
         android:hint="@string/product_title" />
 
     <EditText
         android:id="@+id/prolink"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="150sp"
         android:ems="10"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginBottom="20sp"
         android:inputType="textPersonName"
 
         android:hint="@string/product_link" />
@@ -49,8 +49,8 @@
     <com.skydoves.elasticviews.ElasticImageView
         android:id="@+id/buttonp"
         android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:padding="5dp"
+        android:layout_height="75sp"
+        android:padding="5sp"
         android:src="@drawable/button_add_pro" />
 
 
