--- a/app/src/main/res/layout/activity_edit_order.xml
+++ b/app/src/main/res/layout/activity_edit_order.xml
@@ -8,15 +8,15 @@
     android:layout_height="match_parent"
     tools:context=".edit_order">
     <EditText
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="50sp"
         android:id="@+id/orderID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:maxLines="1"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginBottom="20sp"
         android:inputType="textPersonName"
         android:hint="Order ID" />
 
@@ -26,20 +26,20 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:maxLines="1"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginBottom="20sp"
         android:inputType="textPersonName"
         android:hint="Order Title" />
 
     <EditText
         android:id="@+id/contactDetails"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="150sp"
         android:ems="10"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginBottom="20sp"
         android:inputType="textPersonName"
 
         android:hint="Contact Details" />
@@ -50,9 +50,9 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:maxLines="1"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginBottom="20sp"
         android:inputType="textPersonName"
         android:hint="Tracking Number" />
 
@@ -62,9 +62,9 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:maxLines="1"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginBottom="20sp"
         android:inputType="textPersonName"
         android:hint="Shipped Date"
         />
@@ -75,9 +75,9 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:maxLines="1"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginBottom="20sp"
         android:inputType="textPersonName"
         android:hint="Completed Date"
         />
@@ -87,8 +87,8 @@
     <com.skydoves.elasticviews.ElasticImageView
         android:id="@+id/button"
         android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:padding="5dp"
+        android:layout_height="75sp"
+        android:padding="5sp"
         android:src="@drawable/button_updateorder" />
 
 
