--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="150sp"
         android:id="@+id/bar"
         android:background="@drawable/home_bar"
         android:gravity="center_horizontal"
@@ -21,9 +21,9 @@
         android:id="@+id/lay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="27dp"
-        android:paddingRight="10dp"
+        android:layout_marginStart="10sp"
+        android:layout_marginTop="27sp"
+        android:paddingRight="10sp"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toStartOf="@+id/serchbtn"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,19 +38,19 @@
             android:ems="15"
             android:hint="Enter Order/Product Number"
             android:inputType="textPersonName"
-            android:paddingLeft="20dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp" />
+            android:paddingLeft="20sp"
+            android:paddingTop="10sp"
+            android:paddingBottom="10sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <ImageButton
         android:id="@+id/serchbtn"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="50sp"
+        android:layout_height="50sp"
+        android:layout_marginTop="36sp"
 
-        android:layout_marginEnd="15dp"
+        android:layout_marginEnd="15sp"
         android:background="@drawable/imgbutnconer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -59,25 +59,25 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="543dp"
+        android:layout_height="543sp"
         android:orientation="vertical"
 
         android:background="@drawable/searchview"
-        android:layout_margin="10dp"
+        android:layout_margin="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bar"
-        android:layout_marginVertical="10dp"
-        android:padding="10dp"
+        android:layout_marginVertical="10sp"
+        android:padding="10sp"
 
-        tools:layout_editor_absoluteX="197dp">
+        tools:layout_editor_absoluteX="197sp">
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="100sp"
             android:fontFamily="sans-serif-black"
             android:text="Search Results"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold"
             tools:ignore="MissingConstraints" />
 
@@ -85,7 +85,7 @@
             android:id="@+id/nodata"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="45dp"
+            android:layout_marginTop="45sp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -94,7 +94,7 @@
             app:lottie_fileName="nodata.json"
             app:lottie_loop="true"
             tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="10dp" />
+            tools:layout_editor_absoluteX="10sp" />
 
 
 
@@ -103,7 +103,7 @@
             android:id="@+id/view"
             android:visibility="invisible"
             android:layout_width="match_parent"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="35sp"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
@@ -118,8 +118,8 @@
 
                 <TextView
                     android:id="@+id/seorID"
-                    android:layout_width="300dp"
-                    android:layout_height="50dp"
+                    android:layout_width="300sp"
+                    android:layout_height="50sp"
                     android:background="@drawable/button2"
                     android:fontFamily="serif-monospace"
                     android:gravity="center_vertical"
@@ -136,8 +136,8 @@
 
                     <ImageView
                         android:id="@+id/seimdel2"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="50sp"
+                        android:layout_height="50sp"
 
                         android:visibility="invisible"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -146,8 +146,8 @@
 
                     <ImageView
                         android:id="@+id/seimship"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="50sp"
+                        android:layout_height="50sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:visibility="invisible"
                         app:srcCompat="@drawable/shipped"
@@ -156,8 +156,8 @@
                     <ImageView
                         android:id="@+id/seimntshp"
 
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="50sp"
+                        android:layout_height="50sp"
                         android:visibility="invisible"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:srcCompat="@drawable/not_shipped"
@@ -179,14 +179,14 @@
                 <TextView
                     android:id="@+id/setitle"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="20dp"
+                    android:layout_height="50sp"
+                    android:layout_marginLeft="20sp"
                     android:layout_weight="1"
                     android:fontFamily="serif-monospace"
                     android:gravity="center_vertical"
                     android:text="134485513135"
                     android:textColor="@color/black"
-                    android:textSize="20dp" />
+                    android:textSize="20sp" />
             </LinearLayout>
 
         </LinearLayout>
